# ChangeLog for dev-java/qtjambi
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/qtjambi/Attic/ChangeLog,v 1.5 2007/08/09 20:17:27 caleb Exp $

*qtjambi-4.3.1_p1 (09 Aug 2007)

  09 Aug 2007; Caleb Tennis <caleb@gentoo.org> +qtjambi-4.3.1_p1.ebuild:
  Version bump

*qtjambi-4.3.0_p1-r2 (18 Jun 2007)

  18 Jun 2007; Caleb Tennis <caleb@gentoo.org> qtjambi-4.3.0_p1-r1.ebuild,
  +qtjambi-4.3.0_p1-r2.ebuild:
  Committing some ebuild fixes submitted by martin capitano.

  08 Jun 2007; Caleb Tennis <caleb@gentoo.org> qtjambi-4.3.0_p1-r1.ebuild:
  Some more fixes to put stuff in the right locations

*qtjambi-4.3.0_p1-r1 (08 Jun 2007)

  08 Jun 2007; Caleb Tennis <caleb@gentoo.org> +qtjambi-4.3.0_p1-r1.ebuild:
  Bump, with some location changes

*qtjambi-4.3.0_p1 (07 Jun 2007)

  07 Jun 2007; Caleb Tennis <caleb@gentoo.org> +files/generator.patch,
  +files/jambi.pri.diff, +files/jambipropertysheet.diff,
  +files/java_files_remove_accessibility.diff,
  +files/java_files_remove_ssl.diff, +files/qdesigner_utils_p.h,
  +files/qtjambi_base.pri.diff, +files/shared_global_p.h, +metadata.xml,
  +qtjambi-4.3.0_p1.ebuild:
  Initial ebuild
