@@ -1,3 +1,0 @@
-MD5 513d69812c65bbcc8009e4d4825548d9 qtjambi-gpl-src-4.3.0_01.tar.gz 3371479
-RMD160 bf9b0ed24abcb831228f4c8de4c7fffdb843255e qtjambi-gpl-src-4.3.0_01.tar.gz 3371479
-SHA256 dcbf214c96a39871868e43bef04b552f563359df400d4b05576b60ccb03e7dc3 qtjambi-gpl-src-4.3.0_01.tar.gz 3371479
