@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/qtjambi
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/qtjambi/Attic/ChangeLog,v 1.5 2007/08/09 20:17:27 caleb Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/qtjambi/Attic/ChangeLog,v 1.6 2007/08/09 20:18:32 caleb Exp $
+
+  09 Aug 2007; Caleb Tennis <caleb@gentoo.org> -qtjambi-4.3.0_p1.ebuild,
+  -qtjambi-4.3.0_p1-r1.ebuild:
+  remove old files
 
 *qtjambi-4.3.1_p1 (09 Aug 2007)
 
